--- a/src/bower.json
+++ b/src/bower.json
@@ -14,7 +14,8 @@
     "paper-button": "PolymerElements/paper-button#^1.0.12",
     "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.0",
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.2.0",
-    "re-captcha": "^1.1.1",
-    "social-media-icons": "^1.0.3"
+    "social-media-icons": "^1.0.3",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4"
   }
 }
